RESOLVED FIXED167562
Simple line layout: PerformanceTests/Layout/simple-line-layout-innertext.html regressed at r211108
https://bugs.webkit.org/show_bug.cgi?id=167562
Summary Simple line layout: PerformanceTests/Layout/simple-line-layout-innertext.html...
alan
Reported 2017-01-29 10:54:48 PST
hyphenation support.
Attachments
Patch (6.25 KB, patch)
2017-01-29 11:08 PST, alan
no flags
Patch (6.23 KB, patch)
2017-01-29 11:44 PST, alan
no flags
alan
Comment 1 2017-01-29 11:08:49 PST
Antti Koivisto
Comment 2 2017-01-29 11:13:30 PST
Comment on attachment 300070 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=300070&action=review > Source/WebCore/rendering/SimpleLineLayoutResolver.cpp:56 > + ASSERT(run.hasHyphen && run.start < run.end); You would be better to use separate asserts.
Antti Koivisto
Comment 3 2017-01-29 11:18:32 PST
*It
alan
Comment 4 2017-01-29 11:44:48 PST
WebKit Commit Bot
Comment 5 2017-01-29 12:22:30 PST
Comment on attachment 300071 [details] Patch Clearing flags on attachment: 300071 Committed r211353: <http://trac.webkit.org/changeset/211353>
WebKit Commit Bot
Comment 6 2017-01-29 12:22:35 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.