Source/WebCore/rendering/SimpleLineLayoutResolver.cpp
@@ -47,19 +47,17 @@ static FloatSize lineSize(float logicalLeft, float logicalRight, float height)
 RunResolver::Run::Run(const Iterator& iterator)
     : m_iterator(iterator)
 {
-    constructStringForHyphenIfNeeded();
 }
 
-void RunResolver::Run::constructStringForHyphenIfNeeded()
+String RunResolver::Run::textWithHyphen() const
 {
     auto& run = m_iterator.simpleRun();
-    if (!run.hasHyphen)
-        return;
+    ASSERT(run.hasHyphen);
     // Empty runs should not have hyphen.
     ASSERT(run.start < run.end);
     auto& segment = m_iterator.resolver().m_flowContents.segmentForRun(run.start, run.end);
     auto text = StringView(segment.text).substring(segment.toSegmentPosition(run.start), run.end - run.start);
-    m_textWithHyphen = makeString(text, m_iterator.resolver().flow().style().hyphenString());
+    return makeString(text, m_iterator.resolver().flow().style().hyphenString());
 }
 
 FloatRect RunResolver::Run::rect() const
@@ -82,8 +80,6 @@ FloatRect RunResolver::Run::rect() const
 
 StringView RunResolver::Run::text() const
 {
-    if (m_textWithHyphen)
-        return StringView(*m_textWithHyphen);
     auto& run = m_iterator.simpleRun();
     ASSERT(run.start < run.end);
     auto& segment = m_iterator.resolver().m_flowContents.segmentForRun(run.start, run.end);
